CSS fix for logo cut off and fixed deployment issue

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -188,8 +188,8 @@
     .home-wrapper-div {
         margin: 1em auto;
         width: 90%;
+        height: 100%;
         padding: 0;
-        height: calc(100vh - 8em);
     }
 
     .home-content {
